# university

./: .gitignore
AI4Games/CodeKeeper/: test.py
Architektury-Systemów-Komputerowych/: assembler_instruction_reference.url
KCK+IO/: IO - kolokwium nr1 - odpowiedzi.docx
Ochrona Własności Intelektualnej/: INf PWP w post przed UP 21.ppt  Kazusy zaliczeniowe Z2021.doc  OWI INF 221121.docx  OWI INF 251021.docx  raport.doc
Ochrona-Własności-Intelektualnej/: OWI INF 081121.docx  OWI INF 12.21 i I 22.docx  OWI INF 181021 (2).docx  OWI INF 281121.docx  OWI rodzaje utworów 21.ppt  Zasady zaliczenia zajęć z OWI.docx
Paro/cmake-things/: CMakeLists.txt
Paro/cmake-things/exercise1/: CMakeLists.txt
Paro/cmake-things/exercise1/include/: day-of-year.hpp
Paro/cmake-things/exercise1/ut/: CMakeLists.txt
Paro/cmake-things/exercise2/: readme.txt
Paro/cmake-things/exercise3/: readme.txt
Wizualizacja-Danych/: prezentacja.md
cloud-computing/: prezentacja.md
data-mining/: Bid and Ask Reconstruction.ipynb  Introduction to Time Series Clustering.ipynb  Introduction to Time Series Prediction on Airline Passengers.ipynb  requirements.txt
gen-ai/: presentation.html  presentation.md  starter.md
gnn/: link-prediction.ipynb  prezentacja-sketch.md  prezentacja.md
kck+io/: io-- kolowium nr 2 - odpowiedzi21-01-2021.odt  io.py
paro/: raport.txt
rust/logos-marek/: Cargo.toml  README.md  build.rs
rust/logos-marek/programs/: fern.logo  squares.logo  star.logo  text.logo  tree.logo
rust/logos-marek/src/: ast.rs  effects.rs  lexer.rs  main.rs  parser.lalrpop  run.rs  turtle.rs
(+1287 files in other folders)
